@@ -14,6 +14,8 @@ import com.netgrif.application.engine.objects.auth.domain.ActorTransformer;
 import com.netgrif.application.engine.objects.auth.domain.LoggedUser;
 import com.netgrif.application.engine.objects.event.events.petrinet.ProcessDeleteEvent;
 import com.netgrif.application.engine.objects.event.events.petrinet.ProcessDeployEvent;
+import com.netgrif.application.engine.petrinet.params.DeletePetriNetParams;
+import com.netgrif.application.engine.petrinet.params.ImportPetriNetParams;
 import com.netgrif.application.engine.objects.event.events.petrinet.ProcessEvent;
 import com.netgrif.application.engine.objects.petrinet.domain.PetriNet;
 import com.netgrif.application.engine.objects.petrinet.domain.PetriNetSearch;
@@ -57,7 +59,6 @@ import org.springframework.transaction.annotation.Transactional;
 import java.io.ByteArrayInputStream;
 import java.io.ByteArrayOutputStream;
 import java.io.IOException;
-import java.io.InputStream;
 import java.nio.file.Path;
 import java.util.*;
 import java.util.stream.Collectors;
@@ -80,9 +81,6 @@ public class PetriNetService implements IPetriNetService {
     @Autowired
     protected StorageConfigurationProperties fileStorageConfiguration;
 
-//    @Autowired
-//    protected IRuleEngine ruleEngine;
-
     @Autowired
     protected IWorkflowService workflowService;
 
@@ -95,9 +93,6 @@ public class PetriNetService implements IPetriNetService {
     @Autowired
     protected FieldActionsRunner actionsRunner;
 
-//    @Autowired(required = false)
-//    protected ILdapGroupRefService ldapGroupService;
-
     @Autowired
     protected IFieldActionsCacheService functionCacheService;
 
@@ -106,9 +101,6 @@ public class PetriNetService implements IPetriNetService {
 
     @Autowired
     protected IEventService eventService;
-
-//    @Autowired
-//    protected IHistoryService historyService;
 
     @Autowired
     protected CacheManager cacheManager;
@@ -177,38 +169,30 @@ public class PetriNetService implements IPetriNetService {
     }
 
     @Override
-    @Deprecated
     @Transactional
-    public ImportPetriNetEventOutcome importPetriNet(InputStream xmlFile, String releaseType, LoggedUser author) throws IOException, MissingPetriNetMetaDataException, MissingIconKeyException {
-        return importPetriNet(xmlFile, VersionType.valueOf(releaseType.trim().toUpperCase()), author);
-    }
+    public ImportPetriNetEventOutcome importPetriNet(ImportPetriNetParams importPetriNetParams) throws IOException,
+            MissingPetriNetMetaDataException, MissingIconKeyException {
+        validateAttributes(importPetriNetParams);
 
-    @Override
-    @Transactional
-    public ImportPetriNetEventOutcome importPetriNet(InputStream xmlFile, VersionType releaseType, LoggedUser author) throws IOException, MissingPetriNetMetaDataException, MissingIconKeyException {
-        return importPetriNet(xmlFile, releaseType, author, new HashMap<>());
-    }
-
-    @Override
-    @Transactional
-    public ImportPetriNetEventOutcome importPetriNet(InputStream xmlFile, VersionType releaseType, LoggedUser author, Map<String, String> params) throws IOException, MissingPetriNetMetaDataException, MissingIconKeyException {
         ImportPetriNetEventOutcome outcome = new ImportPetriNetEventOutcome();
         ByteArrayOutputStream xmlCopy = new ByteArrayOutputStream();
-        IOUtils.copy(xmlFile, xmlCopy);
+        IOUtils.copy(importPetriNetParams.getXmlFile(), xmlCopy);
         Optional<PetriNet> importedProcess = getImporter().importPetriNet(new ByteArrayInputStream(xmlCopy.toByteArray()));
         if (importedProcess.isEmpty()) {
             return outcome;
         }
         PetriNet newProcess = importedProcess.get();
-        PetriNet processToMakeNonDefault = checkAndHandleProcessVersion(newProcess, releaseType);
+        PetriNet processToMakeNonDefault = checkAndHandleProcessVersion(newProcess, importPetriNetParams.getReleaseType());
 
         processRoleService.saveAll(newProcess.getRoles().values());
-        newProcess.setAuthor(ActorTransformer.toActorRef(author.getSelfOrImpersonated()));
+        newProcess.setAuthor(ActorTransformer.toActorRef(importPetriNetParams.getAuthor().getSelfOrImpersonated()));
         Path savedPath = getImporter().saveNetFile(newProcess, new ByteArrayInputStream(xmlCopy.toByteArray()));
         xmlCopy.close();
-        log.info("Petri net " + newProcess.getTitle() + " (" + newProcess.getInitials() + " v" + newProcess.getVersion() + ") imported successfully and saved in a folder: " + savedPath.toString());
-
-        runActionAndPublishEvent(outcome, null, newProcess.getPreUploadActions(), params, new ProcessDeployEvent(outcome, EventPhase.PRE));
+        log.info("Petri net {} ({} v{}) imported successfully and saved in a folder: {}", newProcess.getTitle(),
+                newProcess.getInitials(), newProcess.getVersion(), savedPath);
+        functionCacheService.cacheAllPetriNetFunctions();
+        runActionAndPublishEvent(outcome, null, newProcess.getPreUploadActions(), importPetriNetParams.getParams(),
+                new ProcessDeployEvent(outcome, EventPhase.PRE));
 
         if (processToMakeNonDefault != null) {
             doSaveInternal(processToMakeNonDefault);
@@ -216,11 +200,11 @@ public class PetriNetService implements IPetriNetService {
         Optional<PetriNet> saveProcessOpt = doSaveInternal(newProcess);
         functionCacheService.cachePetriNetFunctions(newProcess);
 
-        runActionAndPublishEvent(outcome, saveProcessOpt.orElseThrow(), newProcess.getPostUploadActions(), params, new ProcessDeployEvent(outcome, EventPhase.POST));
+        runActionAndPublishEvent(outcome, saveProcessOpt.orElseThrow(), newProcess.getPostUploadActions(),
+                importPetriNetParams.getParams(), new ProcessDeployEvent(outcome, EventPhase.POST));
 
         return outcome;
     }
-
 
     /**
      * Executes a list of actions associated with a Petri net and publishes a corresponding event after execution.
@@ -440,10 +424,11 @@ public class PetriNetService implements IPetriNetService {
 
     @Override
     public FileSystemResource getFile(String netId, String title) {
-        if (title == null || title.length() == 0) {
+        if (title == null || title.isEmpty()) {
             Query query = Query.query(Criteria.where("_id").is(new ObjectId(netId)));
             query.fields().include("_id").include("title");
-            List<com.netgrif.application.engine.adapter.spring.petrinet.domain.PetriNet> nets = mongoTemplate.find(query, com.netgrif.application.engine.adapter.spring.petrinet.domain.PetriNet.class);
+            List<com.netgrif.application.engine.adapter.spring.petrinet.domain.PetriNet> nets = mongoTemplate.find(query,
+                    com.netgrif.application.engine.adapter.spring.petrinet.domain.PetriNet.class);
             if (nets.isEmpty())
                 return null;
             title = nets.getFirst().getTitle().getDefaultValue();
@@ -468,9 +453,7 @@ public class PetriNetService implements IPetriNetService {
             GroupOperation groupByIdentifier = Aggregation.group("identifier").max("version").as("version");
             Aggregation aggregation;
             if (pageable == null || pageable.isUnpaged()) {
-                aggregation = Aggregation.newAggregation(
-                        groupByIdentifier
-                );
+                aggregation = Aggregation.newAggregation(groupByIdentifier);
             } else {
                 aggregation = Aggregation.newAggregation(
                         groupByIdentifier,
@@ -483,7 +466,8 @@ public class PetriNetService implements IPetriNetService {
             List<PetriNetReference> referenceList = results.stream()
                     .map(doc -> {
                         Document versionDoc = doc.get("version", Document.class);
-                        Version refVersion = new Version(versionDoc.getLong("major"), versionDoc.getLong("minor"), versionDoc.getLong("patch"));
+                        Version refVersion = new Version(versionDoc.getLong("major"), versionDoc.getLong("minor"),
+                                versionDoc.getLong("patch"));
                         return getReference(doc.getString("_id"), refVersion, user, locale);
                     })
                     .collect(Collectors.toList());
@@ -519,12 +503,14 @@ public class PetriNetService implements IPetriNetService {
         Query query = impersonatedProcessesCriteria == null
                 ? Query.query(processRolesCriteria)
                 : Query.query(processRolesCriteria.andOperator(impersonatedProcessesCriteria));
-        return mongoTemplate.find(query, com.netgrif.application.engine.adapter.spring.petrinet.domain.PetriNet.class).stream().map(net -> transformToReference(net, locale)).collect(Collectors.toList());
+        return mongoTemplate.find(query, com.netgrif.application.engine.adapter.spring.petrinet.domain.PetriNet.class).stream()
+                .map(net -> transformToReference(net, locale))
+                .collect(Collectors.toList());
     }
 
     @Override
     public PetriNetReference getReference(String identifier, Version version, LoggedUser user, Locale locale) {
-        PetriNet net = version == null ? getDefaultVersionByIdentifier(identifier) : getPetriNet(identifier, version);
+        PetriNet net = version == null ? self.getDefaultVersionByIdentifier(identifier) : self.getPetriNet(identifier, version);
         return net != null ? transformToReference(net, locale) : new PetriNetReference();
     }
 
@@ -533,8 +519,8 @@ public class PetriNetService implements IPetriNetService {
         Iterable<PetriNet> nets = get(netIds);
         List<TransitionReference> references = new ArrayList<>();
 
-        nets.forEach(net -> references.addAll(net.getTransitions().entrySet().stream()
-                .map(entry -> transformToReference(net, entry.getValue(), locale)).collect(Collectors.toList())));
+        nets.forEach(net -> references.addAll(net.getTransitions().values().stream()
+                .map(transition -> transformToReference(net, transition, locale)).toList()));
 
         return references;
     }
@@ -550,9 +536,9 @@ public class PetriNetService implements IPetriNetService {
                 .forEach(transition -> {
                     Transition trans;
                     if ((trans = net.getTransition(transition.getStringId())) != null) {
-                        dataRefs.addAll(trans.getDataSet().entrySet().stream()
-                                .map(entry -> transformToReference(net, trans, net.getDataSet().get(entry.getKey()), locale))
-                                .collect(Collectors.toList()));
+                        dataRefs.addAll(trans.getDataSet().keySet().stream()
+                                .map(fieldId -> transformToReference(net, trans, net.getDataSet().get(fieldId), locale))
+                                .toList());
                     }
                 }));
 
@@ -561,7 +547,7 @@ public class PetriNetService implements IPetriNetService {
 
     @Override
     public Optional<PetriNet> findByImportId(String id) {
-        return Optional.of(repository.findByImportId(id));
+        return Optional.ofNullable(repository.findByImportId(id));
     }
 
     @Override
@@ -620,47 +606,54 @@ public class PetriNetService implements IPetriNetService {
             this.addValueCriteria(query, queryTotal, Criteria.where("negativeViewRoles").in(criteriaClass.getNegativeViewRoles()));
         }
         if (criteriaClass.getTags() != null) {
-            criteriaClass.getTags().entrySet().forEach(stringStringEntry -> this.addValueCriteria(query, queryTotal, Criteria.where("tags." + stringStringEntry.getKey()).is(stringStringEntry.getValue())));
+            criteriaClass.getTags().forEach((tagKey, tagValue) ->
+                    this.addValueCriteria(query, queryTotal, Criteria.where("tags." + tagKey).is(tagValue)));
         }
 
         query.with(pageable);
-        List<com.netgrif.application.engine.adapter.spring.petrinet.domain.PetriNet> nets = mongoTemplate.find(query, com.netgrif.application.engine.adapter.spring.petrinet.domain.PetriNet.class);
-        return new PageImpl<>(nets.stream().map(net -> new PetriNetReference(net, locale)).collect(Collectors.toList()), pageable, mongoTemplate.count(queryTotal, com.netgrif.application.engine.adapter.spring.petrinet.domain.PetriNet.class));
+        List<com.netgrif.application.engine.adapter.spring.petrinet.domain.PetriNet> nets = mongoTemplate.find(query,
+                com.netgrif.application.engine.adapter.spring.petrinet.domain.PetriNet.class);
+        return new PageImpl<>(nets.stream().map(net -> new PetriNetReference(net, locale)).collect(Collectors.toList()),
+                pageable, mongoTemplate.count(queryTotal, com.netgrif.application.engine.adapter.spring.petrinet.domain.PetriNet.class));
     }
 
-    private void addValueCriteria(Query query, Query queryTotal, Criteria criteria) {
+    protected void addValueCriteria(Query query, Query queryTotal, Criteria criteria) {
         query.addCriteria(criteria);
         queryTotal.addCriteria(criteria);
     }
 
     @Override
     @Transactional
-    public void deletePetriNet(String processId, LoggedUser loggedUser) {
-        deletePetriNet(processId, loggedUser, false);
+    public void deletePetriNet(DeletePetriNetParams deletePetriNetParams) {
+        doDeletePetriNet(deletePetriNetParams, false);
     }
 
     @Override
-    public void forceDeletePetriNet(String processId, LoggedUser loggedUser) {
-        deletePetriNet(processId, loggedUser, true);
+    public void forceDeletePetriNet(DeletePetriNetParams deletePetriNetParams) {
+        doDeletePetriNet(deletePetriNetParams, true);
     }
 
-    protected void deletePetriNet(String processId, LoggedUser loggedUser, boolean force) {
-        Optional<PetriNet> petriNetOptional = repository.findById(processId);
+    protected void doDeletePetriNet(DeletePetriNetParams deletePetriNetParams, boolean force) {
+        fillAndValidateAttributes(deletePetriNetParams);
+
+        Optional<PetriNet> petriNetOptional = repository.findById(deletePetriNetParams.getPetriNetId());
         if (petriNetOptional.isEmpty()) {
-            throw new IllegalArgumentException("Could not find process with id [" + processId + "]");
+            throw new IllegalArgumentException("Could not find process with id [" + deletePetriNetParams.getPetriNetId() + "]");
         }
 
         PetriNet petriNet = petriNetOptional.get();
-        log.info("[{}]: Initiating deletion of Petri net {} version {}", processId, petriNet.getIdentifier(), petriNet.getVersion().toString());
+        log.info("[{}]: Initiating deletion of Petri net {} version {}", deletePetriNetParams.getPetriNetId(),
+                petriNet.getIdentifier(), petriNet.getVersion().toString());
 
         workflowService.deleteInstancesOfPetriNet(petriNet, force);
-        processRoleService.deleteRolesOfNet(petriNet, loggedUser);
+        processRoleService.deleteRolesOfNet(petriNet, deletePetriNetParams.getLoggedUser());
 
-        log.info("[{}]: User [{}] is deleting Petri net {} version {}", processId, userService.getLoggedOrSystem().getStringId(), petriNet.getIdentifier(), petriNet.getVersion().toString());
+        log.info("[{}]: User [{}] is deleting Petri net {} version {}", deletePetriNetParams.getPetriNetId(),
+                deletePetriNetParams.getLoggedUser().getStringId(), petriNet.getIdentifier(), petriNet.getVersion().toString());
         publisher.publishEvent(new ProcessDeleteEvent(petriNet, EventPhase.PRE));
         repository.deleteBy_id(petriNet.getObjectId());
         evictCache(petriNet);
-        functionCacheService.reloadCachedGlobalFunctions(petriNet);
+        functionCacheService.removeCachedPetriNetFunctions(petriNet.getIdentifier());
         if (petriNet.isDefaultVersion()) {
             PetriNet processToMakeDefault = self.getLatestVersionByIdentifier(petriNet.getIdentifier());
             if (processToMakeDefault != null) {
@@ -673,7 +666,7 @@ public class PetriNetService implements IPetriNetService {
         publisher.publishEvent(new ProcessDeleteEvent(petriNet, EventPhase.POST));
     }
 
-    private Criteria getProcessRolesCriteria(LoggedUser user) {
+    protected Criteria getProcessRolesCriteria(LoggedUser user) {
         return new Criteria().orOperator(user.getProcessRoles().stream()
                 .map(role -> Criteria.where("permissions." + role).exists(true)).toArray(Criteria[]::new));
     }
@@ -690,7 +683,7 @@ public class PetriNetService implements IPetriNetService {
 
     @Override
     public void runActions(List<Action> actions, PetriNet petriNet) {
-        log.info("Running actions of net [" + petriNet.getStringId() + "]");
+        log.info("Running actions of net [{}]", petriNet.getStringId());
 
         actions.forEach(action -> {
             actionsRunner.run(action, null, new HashMap<>(), petriNet.getFunctions());
@@ -705,6 +698,27 @@ public class PetriNetService implements IPetriNetService {
             throw new NullPointerException();
         }
         return obj;
+    }
+
+    protected void validateAttributes(ImportPetriNetParams importPetriNetParams) throws IllegalArgumentException {
+        if (importPetriNetParams.getXmlFile() == null) {
+            throw new IllegalArgumentException("No Petriflow source file provided.");
+        }
+        if (importPetriNetParams.getAuthor() == null) {
+            throw new IllegalArgumentException("No author of PetriNet provided.");
+        }
+        if (importPetriNetParams.getReleaseType() == null) {
+            throw new IllegalArgumentException("Version type is null.");
+        }
+    }
+
+    protected void fillAndValidateAttributes(DeletePetriNetParams deletePetriNetParams) throws IllegalArgumentException {
+        if (deletePetriNetParams.getPetriNetId() == null) {
+            throw new IllegalArgumentException("No petriNet identifier was provided.");
+        }
+        if (deletePetriNetParams.getLoggedUser() == null) {
+            deletePetriNetParams.setLoggedUser(ActorTransformer.toLoggedUser(userService.getLoggedOrSystem()));
+        }
     }
 
 }
